// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`拡張v1の遠征を再現する: role.oathbound / none 1`] = `
{
  "fingerprint": "08db364b6d39030283ea4c31151b59ee393b4e2790c98a77c2606d7f0cf39c07",
  "floor": 10,
  "status": "won",
  "turn": 893,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-scout / none 1`] = `
{
  "fingerprint": "3d60f491bdc312df2f972eb95a786ca17a3bf32d91c83e9b711d50bbd25e4c80",
  "floor": 6,
  "status": "returned",
  "turn": 578,
}
`;

exports[`拡張v1の遠征を再現する: role.lantern-priest / none 1`] = `
{
  "fingerprint": "1176f89b41279eb15ed59de3fdf1b0e1a7a7fd2e1552d46b67cd4f91417be6b9",
  "floor": 6,
  "status": "returned",
  "turn": 561,
}
`;

exports[`拡張v1の遠征を再現する: role.relic-surveyor / none 1`] = `
{
  "fingerprint": "6756b90bfee64e69f7ccd497c3f7c53201f9ae9b1d80627c0a4e64d127372740",
  "floor": 10,
  "status": "won",
  "turn": 917,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-apothecary / none 1`] = `
{
  "fingerprint": "e6d8ac61696ecb0d2c52e4b866e952ebacc57484ecd7ebfa6f77dff2f60baeda",
  "floor": 6,
  "status": "returned",
  "turn": 622,
}
`;

exports[`拡張v1の遠征を再現する: role.iron-oath-vanguard / none 1`] = `
{
  "fingerprint": "5ea26ec04f182883b265a8422c50d17c58080b02ef5730098589ef2cfeef3967",
  "floor": 10,
  "status": "won",
  "turn": 885,
}
`;

exports[`拡張v1の遠征を再現する: role.keyshadow-rogue / none 1`] = `
{
  "fingerprint": "39de5947acad727652d99f60d4b87301230e32a8d1584bc6a55cf9ce0e88cc2a",
  "floor": 6,
  "status": "returned",
  "turn": 551,
}
`;

exports[`拡張v1の遠征を再現する: role.oathbound / lantern 1`] = `
{
  "fingerprint": "34f747e31560098be1fbfddc03aaa49d41b4cc2c313810944a4ebd5801105892",
  "floor": 10,
  "status": "won",
  "turn": 924,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-scout / lantern 1`] = `
{
  "fingerprint": "4433d348f537af0faf5e45989caae14c95996dd4fa247af81f94dbe7b6386cd4",
  "floor": 6,
  "status": "returned",
  "turn": 553,
}
`;

exports[`拡張v1の遠征を再現する: role.lantern-priest / lantern 1`] = `
{
  "fingerprint": "8a6ccd38282016c480a557f31577457e2882240de5470d28586f38975f1ead5a",
  "floor": 6,
  "status": "returned",
  "turn": 562,
}
`;

exports[`拡張v1の遠征を再現する: role.relic-surveyor / lantern 1`] = `
{
  "fingerprint": "ffee5500ebccb3046e293026686a5d7baf479bc275d71b39d3a0450218c5fffd",
  "floor": 10,
  "status": "won",
  "turn": 813,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-apothecary / lantern 1`] = `
{
  "fingerprint": "7f89b4fbb0f2b988efc4dca10bc5c5525cc0e189c8dd4c37135b59e06e52052c",
  "floor": 6,
  "status": "returned",
  "turn": 609,
}
`;

exports[`拡張v1の遠征を再現する: role.iron-oath-vanguard / lantern 1`] = `
{
  "fingerprint": "94c0ccadc1a0c6de62394c8c06d26d665eac54c4a71f6f9431bb9611c36e25f9",
  "floor": 10,
  "status": "won",
  "turn": 864,
}
`;

exports[`拡張v1の遠征を再現する: role.keyshadow-rogue / lantern 1`] = `
{
  "fingerprint": "90f7b1a204462e03673294a6f7e888fdea0c464d0d0579ad8c8ebdf3761bc74e",
  "floor": 6,
  "status": "returned",
  "turn": 476,
}
`;
